--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ p {
 
 /* Showcase */
 #showcase {
-  background: url(../img/lobby.jpg) no-repeat center center/cover;
+  background: url(../img/pexels-pixabay-279805.jpg) no-repeat center
+    center/cover;
   height: 600px;
 }
 
@@ -240,6 +241,32 @@ p {
   float: left;
   margin-right: 20px;
   border-radius: 50%;
+}
+
+/* Contact Form */
+#contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+#contact-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#contact-form input,
+#contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px #ddd solid;
+}
+
+#contact-form textarea {
+  height: 200px;
+}
+
+#contact-form input:focus #contact-form textarea:focus {
+  outline: none;
+  border-color: #f7c08a;
 }
 
 /* Footer */
